--- a/plugin/manifest.json.ejs
+++ b/plugin/manifest.json.ejs
@@ -6,7 +6,7 @@
   "host": [
       {
           "app": "PS",
-          "minVersion": "21.0.0"
+          "minVersion": "22.0.0"
       }
   ],
   "manifestVersion": 4,
@@ -17,6 +17,10 @@
           "label": {
               "default": "<%= label %>"
           },
+          "icons": [
+              { "width": 32, "height": 32, "path": "icons/icon_D.png", "scale": [ 1, 2 ], "theme": [ "dark", "darkest" ], "species": [ "generic" ] },
+              { "width": 32, "height": 32, "path": "icons/icon_N.png", "scale": [ 1, 2 ], "theme": [ "lightest", "light" ], "species": [ "generic" ] }
+          ],
           "minimumSize": {
               "width": 230,
               "height": 200
