--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,21 @@ dialog {
 .start   { justify-content: flex-start; }
 .end     { justify-content: flex-end; }
 .center  { justify-content: center; }
+
+/* ---------------- */
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 10vh;
+    background: #231f20;
+    color: white;
+}
+
+.nav-links {
+    width: 40%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+}
